force-app/main/default/objects/Quota_Blob__c/Quota_Blob__c.object-meta.xml
<CustomObject>
    <label>Quota Obj - Test</label>
    <nameField>
        <label>Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quota Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>