force-app/main/default/objects/Quota_Blob__c/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <formula>Q1__c + Q2__c + Q3__c + Q4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>