force-app/main/default/objects/Quota_Blob__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <label>Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>