force-app/main/default/objects/Quota_Blob__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <label>Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>