force-app/main/default/objects/Quota_Blob__c/fields/Quota_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quota_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quota_Objs</relationshipName>
    <type>Lookup</type>
</CustomField>